@@ -5,54 +5,38 @@ import java.util.*;
 import org.skypro.skyshop.product.DiscountProduct;
 import org.skypro.skyshop.product.FixPriceProduct;
 import org.skypro.skyshop.product.Product;
+import org.skypro.skyshop.product.SpecialProduct;
 
 public class ProductBasket {
-    private final Map<String, List<Product>> basket = new HashMap<>();
-    private Map<String, List<Product>> products = new HashMap<>();
-    private final Map<String, List<Product>> productsByName = new TreeMap<>();
-
-
-    public long countSpecialProducts() {
-        return productsByName.values().stream()
-                .flatMap(List::stream)
-                .filter(this::isSpecialProduct)
-                .count();
-    }
-
-    private boolean isSpecialProduct(Product product) {
-        return product instanceof DiscountProduct || product instanceof FixPriceProduct;
-    }
-
+    private final Map<String, List<Product>> basket = new TreeMap<>(Comparator.naturalOrder());
 
     public void addProduct(Product product) {
         String name = product.getName();
         if (!basket.containsKey(name)) {
             basket.put(name, new ArrayList<>());
         }
-        basket.get(name).add(product); // добавляем экземпляр продукта в соответствующий список
+        basket.get(name).add(product);
     }
 
     public List<Product> removeByName(String name) {
         if (basket.containsKey(name)) {
             List<Product> list = basket.get(name);
             if (!list.isEmpty()) {
-                list.remove(list.size() - 1); // удаляем последний элемент списка
+                Product lastProduct = list.remove(list.size() - 1);
                 if (list.isEmpty()) {
-                    basket.remove(name); // Если больше нет продуктов с данным именем, удаляем запись из карты
+                    basket.remove(name);
                 }
-                return list;
+                return List.of(lastProduct);
             }
         }
-        return Collections.emptyList();
+        return List.of();
     }
 
     public int getTotalPrice() {
         int total = 0;
-        for (List<Product> productList : products.values()) {
-            if (productList != null) {
-                for (Product product : productList) {
-                    total += product.getPrice();
-                }
+        for (List<Product> productList : basket.values()) {
+            for (Product product : productList) {
+                total += product.getPrice();
             }
         }
         return total;
@@ -62,31 +46,29 @@ public class ProductBasket {
         for (String key : basket.keySet()) {
             System.out.println("Продукты '" + key + "' (" + basket.get(key).size() + ")");
             for (Product p : basket.get(key)) {
-                System.out.println("\t- " + p.toString()); // печать каждого экземпляра продукта
+                System.out.println("\t- " + p.toString());
             }
         }
     }
 
     public boolean containsProduct(String name) {
-        for (List<Product> productList : products.values()) {
-            for (Product product : productList) {
-                if (product != null && product.getName().equals(name)) {
-                    return true;
-                }
-            }
-        }
-        return false;
+        return basket.containsKey(name) && !basket.get(name).isEmpty();
     }
 
     public List<Product> getProducts() {
         List<Product> allProducts = new ArrayList<>();
-        for (List<Product> productList : this.products.values()) {
+        for (List<Product> productList : basket.values()) {
             allProducts.addAll(productList);
         }
         return allProducts;
     }
 
-    // System.out.println("Корзина полна");
+    public long countSpecialProducts() {
+        return basket.values().stream()
+                .flatMap(List::stream)
+                .filter(p -> p instanceof SpecialProduct)
+                .count();
+    }
 }
 
 
